--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,12 @@
 		<dependency>
 			<groupId>io.magentys</groupId>
 			<artifactId>donut</artifactId>
-			<version>0.0.1</version>
+			<version>0.0.4</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.maven</groupId>
+			<artifactId>maven-core</artifactId>
+			<version>3.1.0</version>
 		</dependency>
 	</dependencies>
 
